--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index",
+    "dev": "ts-node-dev src/index",
     "build": "tsc",
     "start": "node ./dist/index"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "discord.js": "^14.5.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ts-node-dev": "^2.0.0"
   }
 }
