--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "testbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/index",
+    "dev": "ts-node -r tsconfig-paths/register src/main",
+    "prebuild": "rimraf dist",
     "build": "tsc",
-    "start": "node ./dist/index"
+    "start": "node -r module-alias/register dist/main"
   },
-  "devDependencies": {
-    "typescript": "^4.8.4"
+  "_moduleAliases": {
+    "@": "dist"
   },
   "dependencies": {
+    "@types/glob": "^8.0.0",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
-    "ts-node-dev": "^2.0.0"
+    "glob": "^8.0.3",
+    "module-alias": "^2.2.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
+    "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.4"
   }
 }
